# grayscale

./: .env  .gitignore  README.md  image_grayscale.py  image_resize.py  main.py  pyproject.toml  saved_image_grayscale.py
src/grayscale/: preprocessor.py
src/vidstream_grayscale/: init.py  preprocessor.py
